# quarkus/quarkus-vertx-openapi-demo/src/main/java/com/hurui/entity/Post.java
@@ -31,6 +31,15 @@ public class Post extends PanacheEntityBase implements Serializable {
     @Column(name = "text", nullable = false, length = 20000)
     private String text;
 
+    @Column(name = "display_name", length = 300, nullable = false)
+    private String displayName;
+
+    @Column(name = "likes", nullable = false)
+    private Long likes;
+
+    @Column(name = "dislikes", nullable = false)
+    private Long dislikes;
+
     @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
     @Column(name = "comments")
     private List<Comment> comments = new ArrayList<>();
@@ -46,10 +55,13 @@ public class Post extends PanacheEntityBase implements Serializable {
     public Post() {
     }
 
-    public Post(Long id, String title, String text, List<Comment> comments, ZonedDateTime createdDate, ZonedDateTime lastModifiedDate) {
+    public Post(Long id, String title, String text, String displayName, Long likes, Long dislikes, List<Comment> comments, ZonedDateTime createdDate, ZonedDateTime lastModifiedDate) {
         this.id = id;
         this.title = title;
         this.text = text;
+        this.displayName = displayName;
+        this.likes = likes;
+        this.dislikes = dislikes;
         this.comments = comments;
         this.createdDate = createdDate;
         this.lastModifiedDate = lastModifiedDate;
@@ -57,6 +69,7 @@ public class Post extends PanacheEntityBase implements Serializable {
 
     public Post(JsonObject jsonObject) {
         PostConverter.fromJson(jsonObject, this);
+        System.out.println("This comment count: " + (long) this.getComments().size());
     }
 
     public JsonObject toJson() {
@@ -98,6 +111,30 @@ public class Post extends PanacheEntityBase implements Serializable {
 
     public void setText(String text) {
         this.text = text;
+    }
+
+    public String getDisplayName() {
+        return displayName;
+    }
+
+    public void setDisplayName(String displayName) {
+        this.displayName = displayName;
+    }
+
+    public Long getLikes() {
+        return likes;
+    }
+
+    public void setLikes(Long likes) {
+        this.likes = likes;
+    }
+
+    public Long getDislikes() {
+        return dislikes;
+    }
+
+    public void setDislikes(Long dislikes) {
+        this.dislikes = dislikes;
     }
 
     public List<Comment> getComments() {
